fix collapse/folder icon color when using simple rainbow

--- a/src/modules/Features/Rainbow-File-Browser/simplerainbow.scss
+++ b/src/modules/Features/Rainbow-File-Browser/simplerainbow.scss
@@ -55,7 +55,7 @@
 		}
 	}
 	// Color Collapse Indicators
-	&.anp-simple-rainbow-collapse-toggle {
+	&.anp-simple-rainbow-collapse-icon-toggle {
 		.tree-item-self .tree-item-icon {
 			--icon-color: rgba(
 				var(--rainbow-folder-color),
